# meet-jerky

./: .gitignore  PLANS.md  README.md  RESEARCH.md  TODO.md  flake.nix  package-lock.json  package.json  plan.md  wxt.config.ts
desktop/: .gitignore  AGENTS.md  AGENT_LOG.md  index.html  meet-jerky-desktop.pen  package-lock.json  package.json
desktop/docs/: agent-harness-claude.md  agent-harness.md  autonomous-main-prompt-claude.md  autonomous-main-prompt.md  autonomous-start-prompt-claude.md  autonomous-start-prompt.md  product-concept.md
desktop/docs/architecture/: agent-log-archive-plan.md  detection-extension-plan.md  transcription-refactor-plan.md
desktop/scripts/: agent-adopt-main.sh  agent-commit.sh  agent-common.sh  agent-handoff-main.sh  agent-send-input.sh  agent-start-research.sh  agent-start-watchdog.sh  agent-start-worker.sh  agent-tail-output.sh  agent-verify.sh  agent-watch.sh  agent-watchdog.sh  claude-agent-common.sh  claude-agent-handoff-main.sh  claude-agent-start-research.sh  claude-agent-start-watchdog.sh  claude-agent-start-worker.sh  claude-agent-watchdog.sh
desktop/src/: App.css  App.tsx  main.tsx  router.tsx
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: app_detection.rs  app_detection_google_meet.rs  app_detection_goto.rs  app_detection_inactive_decision.rs  app_detection_macos.rs  app_detection_meeting_classifier.rs  app_detection_notification.rs  app_detection_teams.rs  app_detection_throttle_key.rs  app_detection_url_helpers.rs  app_detection_webex.rs  app_detection_whereby.rs  app_detection_zoom.rs  apple_speech.rs  apple_speech_macos.rs  audio.rs  audio_event.rs  audio_resample.rs  audio_sample_helpers.rs  audio_silence.rs  audio_traits.rs  audio_utils.rs  cloud_whisper.rs  cloud_whisper_errors.rs  datetime_fmt.rs  elevenlabs_realtime.rs  elevenlabs_realtime_ws_task.rs  lib.rs  main.rs  markdown.rs  openai_realtime.rs  openai_realtime_ws_task.rs  realtime_audio_command.rs  realtime_audio_helpers.rs  realtime_error_helpers.rs  realtime_reader_task.rs  realtime_ws_helpers.rs  secret_store.rs  secret_store_commands.rs  session.rs  (+35 more)
desktop/src-tauri/swift/: AppDetectionBridge.swift  PrivacyBridge.swift  SpeechAnalyzerBridge.swift
desktop/src/types/: index.ts
entrypoints/: background.ts  content.ts
entrypoints/options/: index.html  main.ts  style.css
entrypoints/popup/: index.html  main.ts  style.css
utils/: ai-client.ts  caption-dom.ts  google-auth.ts  google-docs.ts  google-sheets.ts  helpers.ts  idb.ts  messaging.ts  notification.ts  retention.ts  selectors.ts  settings.ts  template.ts  types.ts
utils/__tests__/: ai-client.test.ts  caption-dom.test.ts  google-auth.test.ts  google-docs.test.ts  google-sheets.test.ts  helpers.test.ts  notification.test.ts  retention.test.ts  selectors.test.ts  settings.test.ts  template.test.ts
(+842 files in other folders)
