[package]
name = "meet-jerky"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "meet_jerky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
ringbuf = "0.4"
parking_lot = "0.12"
whisper-rs = "0.16"
rubato = "0.16"
hound = "3.5"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
rfd = "0.15"
chrono = "0.4.44"
thiserror = "2.0.18"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5"

[dev-dependencies]
tempfile = "3.27.0"
